Mon Jan 24 12:37:22 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setVariables), htcommon/defaults.cc: Added
	build_select_lists attribute, to generate selector menus in forms.
	Added relevant explanations and links to selectors documentation.
	* htdoc/hts_selectors.html: Added this page to explain this new
	feature, plus other details on select lists in general.
	* htdoc/hts_templates.html: Added relevant links to related attributes
	and selectors documentation.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl

Fri Jan 21 18:57:58 EET 2000  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/HtConfiguration.cc: added HtConfiguration::ParseString(char*)
	method to allow lexer handle "include: ${var}/file.inc" construction

	* htcommon/conf_lexer.lxx: fixed handling "include: ${var}file.inc" 
	bug.

Wed Jan 19 21:49:57 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc (do_tag): Only add words for META descriptions,
	keywords, and IMG ALT attributes if doindex is set.

	* htcommon/DocumentRef.h: Added Reference_obsolete for documents
	that should be removed (but haven't).

	* htdig/Retriever.cc (parse_url): Flag documents that have been
	modified as Reference_obsolete and update the database. Flag all
	documents with various errors as something other than
	Reference_normal, as appropriate--these probably should be pruned.

	* htdig/Retriever.h: Get rid of GetRef() method--it's only used once!
	
	* htsearch/Display.cc (display): Don't show DocumentRefs with
	states other than Reference_normal--these documents have various
	errors.

	* htmerge/docs.cc: If a document has a state of Reference_obsolete, ignore it.

	* htcommon/HtWordList.h, htcommon/HtWordList.cc (Skip): Change
	MarkGone() to Skip() to emphasize that this document should be ignored.

Wed Jan 19 14:11:51 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordList.cc (SkipUselessSequentialWalking): return OK if skipping, 
	  NOTOK if not skipping.
